<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  <shortcut
    android:shortcutId="book-now"
    android:enabled="true"
    android:icon="@mipmap/ic_launcher"
    android:shortcutShortLabel="@string/shortcut_book_now"
    android:shortcutLongLabel="@string/shortcut_book_now"
    android:shortcutDisabledMessage="@string/shortcut_book_now">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="charterkeke://rider/booking" />
    <categories android:name="android.shortcut.conversation" />
  </shortcut>

  <shortcut
    android:shortcutId="available-rides"
    android:enabled="true"
    android:icon="@mipmap/ic_launcher"
    android:shortcutShortLabel="@string/shortcut_available_rides"
    android:shortcutLongLabel="@string/shortcut_available_rides"
    android:shortcutDisabledMessage="@string/shortcut_available_rides">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="charterkeke://driver/available-rides" />
  </shortcut>

  <shortcut
    android:shortcutId="recent-rides"
    android:enabled="true"
    android:icon="@mipmap/ic_launcher"
    android:shortcutShortLabel="@string/shortcut_recent_rides"
    android:shortcutLongLabel="@string/shortcut_recent_rides"
    android:shortcutDisabledMessage="@string/shortcut_recent_rides">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="charterkeke://rider/rides-history" />
  </shortcut>

  <shortcut
    android:shortcutId="support-chat"
    android:enabled="true"
    android:icon="@mipmap/ic_launcher"
    android:shortcutShortLabel="@string/shortcut_support"
    android:shortcutLongLabel="@string/shortcut_support"
    android:shortcutDisabledMessage="@string/shortcut_support">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="charterkeke://rider/help-and-support" />
  </shortcut>
</shortcuts>
